--- a/package.json
+++ b/package.json
@@ -38,28 +38,25 @@
   },
   "homepage": "https://github.com/iam-hussain/elementary#readme",
   "devDependencies": {
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.12.7",
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "release-it": "^17.1.1",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3"
+    "scss": "^0.2.4",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "lint-staged": "^15.2.2",
     "nativewind": "^2.0.11",
-    "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "react-native": "^0.74.1",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.74.2",
+    "react-native-web": "^0.19.12",
     "tailwind-merge": "^2.3.0"
   },
   "types": "./src/index.d.ts",
