--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8.4.38",
     "release-it": "^17.1.1",
     "scss": "^0.2.4",
